[package]
name = "chat_p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = {version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"]}
